--- a/MaintenanceDashboard.Client/MainWindow.xaml
+++ b/MaintenanceDashboard.Client/MainWindow.xaml
@@ -41,7 +41,7 @@
                                            Development by Michał Górnik <LineBreak/>
                                            michalgornik93@outlook.com <LineBreak/>
                                            MaintenanceDashboard<LineBreak/>
-                                           Vesion 2.2.2 <LineBreak/>
+                                           Vesion 2.2.3 <LineBreak/>
 
                                 </TextBlock>
                             </StackPanel>
@@ -96,14 +96,14 @@
         <Grid Margin="330 20 10 10">
             <Grid x:Name="GridPrincipal" HorizontalAlignment="Center" VerticalAlignment="Center">
 
-                <!--<Image Source="Image/Zenek.png"/>-->
+                <Image Source="Image/Zenek.png"/>
 
             </Grid>
         </Grid>
 
         <StackPanel Width="320" HorizontalAlignment="Left" Background="#ff222222">
             <Grid Background="White" Margin="10">
-                <Image Source="Image/Logo.png"/>
+                <Image Source="Image/Logo.jpg"/>
             </Grid>
 
             <Grid HorizontalAlignment="Left" Background="#ff222222" VerticalAlignment="Bottom">
