--- a/MaintenanceDashboard.Client/Views/ComponentDetailsWindow.xaml
+++ b/MaintenanceDashboard.Client/Views/ComponentDetailsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MaintenanceDashboard.Client.Views.ComponentFormInfoControl"
+﻿<Window x:Class="MaintenanceDashboard.Client.Views.ComponentDetailsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,8 @@
         Title="ComponentFormControl" Width="540"
         xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        d:DataContext="{d:DesignInstance viewModels:ComponentFormInfoViewModel}" FontFamily="Roboto"
+        d:DataContext="{d:DesignInstance viewModels:ComponentDetailsViewModel}" 
+        FontFamily="Roboto"
         WindowStyle="None" WindowStartupLocation="Manual" ResizeMode="NoResize">
     <ScrollViewer>
         <Grid>
