--- a/MaintenanceDashboard.Client/Views/PreventionControl.xaml
+++ b/MaintenanceDashboard.Client/Views/PreventionControl.xaml
@@ -15,7 +15,6 @@
             <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}"  VerticalAlignment="Top"
                                            HorizontalAlignment="Center" Margin="18" Foreground="Gray" Text="PREWENCJE DO WYKONANIA" FontSize="18" />
             <StackPanel HorizontalAlignment="Center" Margin="25" VerticalAlignment="Center">
-               
                 <DataGrid Margin="10" Background="White" ItemsSource="{Binding Preventions}" AlternationCount="{Binding Preventions.Count}"
                           AutoGenerateColumns="False" IsReadOnly="True" Height="500" Width="820" FontSize="11">
                     <DataGrid.Columns>
@@ -28,6 +27,10 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </StackPanel>
+            
+            <Button VerticalAlignment="Bottom" HorizontalAlignment="Right" Style="{StaticResource MaterialDesignFlatButton}" 
+                    Height="40" FontSize="14" Margin="10"  Foreground="Gray"  Content="GENERUJ LISTE PALETEK DO PRZEGLĄDU" 
+                    Command="{Binding GetReviewPaddlesDetailsCommand}"/>
         </Grid>
     </Grid>
 </UserControl>
