--- a/MaintenanceDashboard.Client/MainWindow.xaml
+++ b/MaintenanceDashboard.Client/MainWindow.xaml
@@ -170,6 +170,15 @@
                                        VerticalAlignment="Center" Margin="20 0" />
                         </StackPanel>
                     </ListViewItem>
+
+                    <ListViewItem x:Name="ServiceListViewItem" Height="60" Foreground="LightGray" Style="{StaticResource BlinkingListViewItem}" >
+                        <StackPanel Orientation="Horizontal" >
+                            <materialDesign:PackIcon Kind="ServiceToolbox" Width="30" Height="30"  
+                                                     VerticalAlignment="Center" Margin="5"/>
+                            <TextBlock Text="Panel serwisowy" 
+                                       VerticalAlignment="Center" Margin="20 0" />
+                        </StackPanel>
+                    </ListViewItem>
                 </ListView>
             </Grid>
         </StackPanel>
