--- a/MaintenanceDashboard.Client/MainWindow.xaml
+++ b/MaintenanceDashboard.Client/MainWindow.xaml
@@ -171,7 +171,7 @@
                         </StackPanel>
                     </ListViewItem>
 
-                    <ListViewItem x:Name="ServiceListViewItem" Height="60" Foreground="LightGray" Style="{StaticResource BlinkingListViewItem}" >
+                    <ListViewItem x:Name="ServiceListViewItem" Height="60" Foreground="LightGray">
                         <StackPanel Orientation="Horizontal" >
                             <materialDesign:PackIcon Kind="ServiceToolbox" Width="30" Height="30"  
                                                      VerticalAlignment="Center" Margin="5"/>
