--- a/MaintenanceDashboard.Client/Views/ServiceControl.xaml
+++ b/MaintenanceDashboard.Client/Views/ServiceControl.xaml
@@ -12,22 +12,24 @@
             <ColumnDefinition Width="500"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        
 
-        <Grid Grid.Column="0"  Margin="10">
+
+        <Grid Grid.Column="0"  Margin="10" >
             <Rectangle Width="450" Height="730" VerticalAlignment="Bottom"  RadiusY="10" RadiusX="10" Fill="White">
                 <Rectangle.Effect>
                     <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
                 </Rectangle.Effect>
             </Rectangle>
-            <TextBlock Text="Panel drukarki Zebra" HorizontalAlignment="Center" VerticalAlignment="Top"  
-                           FontSize="18"  Foreground="Gray" Margin="20"/>
+
+            <StackPanel Height="70" Margin="0 10 " VerticalAlignment="Top" Background="#007CB0" Width="450">
+                <Image Source="/Image/Zebra_Logo_W.png" Width="120" Height="40" Margin="15" HorizontalAlignment="Left"/>
+            </StackPanel>
             <StackPanel HorizontalAlignment="Center" Margin="25" VerticalAlignment="Center">
                 <TextBox  Text="{Binding IpAddress}" Margin="15" materialDesign:HintAssist.HelperText="IP Address"/>
                 <TextBox  Text="{Binding BarcodeDescription}" Margin="15" materialDesign:HintAssist.HelperText="Opis"/>
                 <TextBox  Text="{Binding BarcodeNumber}" Margin="15" materialDesign:HintAssist.HelperText="Kod kreskowy"/>
-                <Button  Content="Print" Width="150" Command="{Binding PrintLabelCommand}" FontSize="15" Height="30" Margin="15" 
-                         Background="#FF0069C0" BorderBrush="#FF0069C0"/>
+                <Button  Content="Drukuj etykiete" Width="150" Command="{Binding PrintLabelCommand}" FontSize="15" Height="30" Margin="15" 
+                         Background="#007CB0" BorderBrush="#007CB0"/>
             </StackPanel>
         </Grid>
         <Grid Grid.Column="1" Margin="10">
@@ -36,9 +38,13 @@
                     <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
                 </Rectangle.Effect>
             </Rectangle>
-            <TextBlock Text="Panel sterownika PLC" HorizontalAlignment="Center" VerticalAlignment="Top"  
-                           FontSize="18"  Foreground="Gray" Margin="20"/>
-          
+            <StackPanel Height="70" Margin="0 10 " VerticalAlignment="Top" Background="#007CB0" Width="450">
+                <WrapPanel>
+                    <Image Source="/Image/plc.png" Width="40" Height="40" Margin="15" HorizontalAlignment="Left"/>
+                    <TextBlock Text="S7-1200" Foreground="White" VerticalAlignment="Center" FontSize="23" FontFamily="Arial Black"/>
+                </WrapPanel>
+            </StackPanel>
+
         </Grid>
     </Grid>
 </UserControl>
