--- a/MaintenanceDashboard.Client/Views/ReceiveThermostatControl.xaml
+++ b/MaintenanceDashboard.Client/Views/ReceiveThermostatControl.xaml
@@ -97,9 +97,9 @@
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  Width="220" materialDesign:HintAssist.Hint="Uwagi" 
+                    <TextBox  Width="220" materialDesign:HintAssist.Hint="Opis interwencji" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
-                              Text="{Binding Comments}"/>
+                              Text="{Binding DescriptionIntervention}"/>
                 </WrapPanel>
 
                 <Button Height="25"  Background="#FF0069C0" 
