--- a/MaintenanceDashboard.Client/App.xaml
+++ b/MaintenanceDashboard.Client/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="MaintenanceDashboard.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             >
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -75,7 +75,6 @@
             </Style>
 
             <Style x:Key="BlinkingListViewItem" TargetType="ListViewItem" >
-
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding BlinkingPreventionControlItem , UpdateSourceTrigger=PropertyChanged}" Value="true">
                         <DataTrigger.EnterActions>
@@ -94,13 +93,9 @@
                                 </Storyboard>
                             </BeginStoryboard>
                         </DataTrigger.ExitActions>
-
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
-
         </ResourceDictionary>
-
     </Application.Resources>
-
 </Application>
