--- a/MaintenanceDashboard.Client/Views/MainWindow.xaml
+++ b/MaintenanceDashboard.Client/Views/MainWindow.xaml
@@ -40,7 +40,7 @@
                                            Development by Michał Górnik <LineBreak/>
                                            michalgornik93@outlook.com <LineBreak/>
                                            MaintenanceDashboard<LineBreak/>
-                                           Vesion 3.2.0 <LineBreak/>
+                                           Vesion 4.0.1 <LineBreak/>
                                 </TextBlock>
                             </StackPanel>
                         </materialDesign:PopupBox>
@@ -78,7 +78,7 @@
 
                     <StackPanel VerticalAlignment="Top" Margin="10">
                         <Button x:Name="btnCloseWindow" Width="15" Height="22" 
-                            Background="{x:Null}" BorderBrush="{x:Null}" 
+                            Background="{x:Null}" BorderBrush="{x:Null}" IsEnabled="False"
                             Padding="0" Foreground="Gray" Click="btnCloseWindow_Click">
                             <materialDesign:PackIcon Kind="Power" Width="15" Height="15"/>
                         </Button>
